--- a/sellandbuy/public/css/katalog.css
+++ b/sellandbuy/public/css/katalog.css
@@ -14,6 +14,12 @@
     }
 }
 
+.katalog {
+    @media (min-width: 640px) {
+        width: 100vw;
+    }
+}
+
 .line {
     @media (max-width: 1280px) {
         display:none;
