--- a/sellandbuy/src/templates/market/katalog.ejs
+++ b/sellandbuy/src/templates/market/katalog.ejs
@@ -20,67 +20,67 @@
   </head>
   <body class="min-h-screen flex flex-col font-saira">
     <!-- Navbar -->
-    <div id="nav-wrp" class="mb-20">
+    <div id="nav-wrp" class="w-full mb-20">
       <header
         id="navbar"
-        class="bg-white fixed flex items-center justify-center flex-col inset-x-0 top-0 z-50"
+        class="w-screen bg-white fixed flex items-center justify-center flex-col inset-x-0 top-0 z-50 overflow-hidden"
       >
         <div
           id="top-nav"
-          class="w-full flex items-center justify-between sm:pt-4 sm:pb-0 px-2 sm:px-5 pt-5 pb-5"
+          class="w-full flex items-center justify-between px-2 sm:px-5 sm:py-4 py-5"
         >
-          <div id="left-part" class="sm:w-1/3 flex justify-start">
-            <div class="relative inline-block text-left">
-              <div>
-                <button
-                  type="button"
-                  class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-black px-3 py-2 text-sm font-semibold text-white shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-900"
-                  id="menu-button"
-                  aria-expanded="false"
-                  aria-haspopup="true"
-                >
-                  Kategori
-                </button>
-              </div>
-              <div
-                class="absolute left-0 right-0 z-10 mt-2 w-56 origin-top-right rounded-xl bg-black shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden transition-all duration-300 ease-in-out"
-                role="menu"
-                aria-orientation="vertical"
-                aria-labelledby="menu-button"
-                tabindex="-1"
-                id="menu"
+        <div id="left-part" class="flex justify-start">
+          <div class="relative inline-block text-left">
+            <div>
+              <button
+                type="button"
+                class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-black px-3 py-2 text-sm font-semibold text-white shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-900"
+                id="menu-button"
+                aria-expanded="false"
+                aria-haspopup="true"
               >
-                <div class="py-1 bg-black rounded-xl" role="none">
-                  <% categories.forEach(category => { %>
-                  <button
-                    class="block w-full px-4 py-2 text-center text-sm bg-black text-white cursor-pointer hover:underline hover:underline-offset-4 hover:decoration-white"
-                    role="menuitem"
-                    tabindex="-1"
-                    onclick="location.href = '/katalog?category=<%= category._id %>'"
-                  >
-                    <%= category.name %>
-                  </button>
-                  <% }) %>
-                </div>
+                Kategori
+              </button>
+            </div>
+            <div
+              class="absolute left-0 right-0 z-10 mt-2 w-56 origin-top-right rounded-xl bg-black shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden transition-all duration-300 ease-in-out"
+              role="menu"
+              aria-orientation="vertical"
+              aria-labelledby="menu-button"
+              tabindex="-1"
+              id="menu"
+            >
+              <div class="py-1 bg-black rounded-xl" role="none">
+                <% categories.forEach(category => { %>
+                <button
+                  class="block w-full px-4 py-2 text-center text-sm bg-black text-white cursor-pointer hover:underline hover:underline-offset-4 hover:decoration-white"
+                  role="menuitem"
+                  tabindex="-1"
+                  onclick="location.href = '/katalog?category=<%= category._id %>'"
+                >
+                  <%= category.name %>
+                </button>
+                <% }) %>
               </div>
             </div>
           </div>
+        </div>
           <a
             href="/"
             id="navbar-logo"
-            class="w-auto mx-auto sm:w-1/3 flex items-center justify-center"
+            class="sm:ml-36 flex items-center justify-center"
           >
             <img
               id="logo"
-              class="h-5 sm:h-9 sm:w-auto cursor-pointer"
+              class="h-5 sm:h-9 cursor-pointer"
               src="/images/navbar-logo.png"
             />
           </a>
-          <div id="pfl" class="hidden sm:flex w-1/3 justify-end">
+          <div id="pfl" class="text-right sm:flex w-auto h-auto justify-end">
             <a
               id="sell"
               href="/jual"
-              class="flex w-10 h-10 rounded-full items-center justify-center shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
+              class="flex rounded-full justify-end mr-2 sm:mr-0 shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
             >
               <img class="w-btn-pfl" src="/images/tambahkan.png" />
             </a>
@@ -127,7 +127,7 @@
         </div>
         <div
           id="bot-nav"
-          class="w-full flex items-center justify-center pt-2 pb-4 sm:px-[20px]"
+          class="w-full flex items-center justify-center py-2 sm:px-[20px]"
         >
           <form
             action="/katalog"
@@ -238,7 +238,7 @@
         </div>
 
         <!-- Product Listing Section -->
-        <div class="w-full ml-4 md:w-3/4 xl:pl-4">
+        <div class="katalog w-1/3 sm:w-screen ml-4 md:w-3/4 xl:pl-4">
           <h1 class="text-4xl font-bold mb-2">Katalog</h1>
           <hr class="line h-px w-full bg-black border-0 dark:bg-gray-700" />
           <div
@@ -400,3 +400,4 @@
     <script src="/js/script.js"></script>
   </body>
 </html>
+
