--- a/sellandbuy/src/templates/membership/pembayaran.ejs
+++ b/sellandbuy/src/templates/membership/pembayaran.ejs
@@ -103,11 +103,11 @@
               src="/images/navbar-logo.png"
             />
           </a>
-          <div id="pfl" class="hidden sm:flex w-1/3 justify-end">
+          <div id="pfl" class="text-right sm:flex w-auto h-auto sm:w-1/3 justify-end sm:ml-auto">
             <a
               id="sell"
               href="/jual"
-              class="flex w-10 h-10 rounded-full items-center justify-center shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
+              class="flex rounded-full justify-end mr-2 sm:mr-0 shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
             >
               <img class="w-btn-pfl" src="/images/tambahkan.png" />
             </a>
