--- a/sellandbuy/src/templates/profile/item/penawaran.ejs
+++ b/sellandbuy/src/templates/profile/item/penawaran.ejs
@@ -103,11 +103,11 @@
               src="/images/navbar-logo.png"
             />
           </a>
-          <div id="pfl" class="hidden sm:flex w-1/3 justify-end">
+          <div id="pfl" class="text-right sm:flex w-auto h-auto sm:w-1/3 justify-end sm:ml-auto">
             <a
               id="sell"
               href="/jual"
-              class="flex w-10 h-10 rounded-full items-center justify-center shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
+              class="flex rounded-full justify-end mr-2 sm:mr-0 shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
             >
               <img class="w-btn-pfl" src="/images/tambahkan.png" />
             </a>
@@ -150,21 +150,6 @@
                 />
               </form>
             </div>
-          </div>
-          <div id="slider" class="flex sm:hidden justify-end items-center">
-            <a id="menu" href="#">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                height="24px"
-                viewBox="0 -960 960 960"
-                width="24px"
-                fill="#000000"
-              >
-                <path
-                  d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"
-                ></path>
-              </svg>
-            </a>
           </div>
         </div>
         <div
