fixed navbar overflow

--- a/sellandbuy/src/templates/landing-page/index.ejs
+++ b/sellandbuy/src/templates/landing-page/index.ejs
@@ -19,6 +19,7 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body class="pt-[101.2px] sm:pt-[96px] font-saira">
+    
     <!-- navbar -->
     <div id="nav-wrp">
       <header
@@ -120,9 +121,9 @@
             <a
               id="sell"
               href="/jual"
-              class="flex rounded-full justify-end mr-2 sm:mr-0 shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
+              class="flex rounded-full justify-end pl-12 mr-2 sm:mr-0 shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
             >
-              <img class="w-btn-pfl" src="images/tambahkan.png" />
+              <img class="w-btn-pfl hover:bg-slate-200" src="images/tambahkan.png" />
             </a>
             <div
               id="srch-bar"
