--- a/sellandbuy/src/templates/market/katalog.ejs
+++ b/sellandbuy/src/templates/market/katalog.ejs
@@ -23,7 +23,7 @@
     <div id="nav-wrp" class="w-full mb-20">
       <header
         id="navbar"
-        class="w-screen bg-white fixed flex items-center justify-center flex-col inset-x-0 top-0 z-50 overflow-hidden"
+        class="w-screen bg-white fixed flex items-center justify-center flex-col inset-x-0 top-0 z-50 overflow-visible"
       >
         <div
           id="top-nav"
@@ -43,19 +43,18 @@
               </button>
             </div>
             <div
-              class="absolute left-0 right-0 z-10 mt-2 w-56 origin-top-right rounded-xl bg-black shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden transition-all duration-300 ease-in-out"
-              role="menu"
-              aria-orientation="vertical"
-              aria-labelledby="menu-button"
-              tabindex="-1"
-              id="menu"
-            >
-              <div class="py-1 bg-black rounded-xl" role="none">
+            class="absolute overflow-visible left-0 z-40 mt-2 w-56 origin-top-right rounded-xl bg-black shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden transition-all ease-in-out"
+            role="menu"
+            aria-orientation="vertical"
+            aria-labelledby="menu-button"
+            tabindex="-1"
+            id="menu"
+            >          
+              <div class="py-1 z-50 bg-black rounded-xl" role="none">
                 <% categories.forEach(category => { %>
                 <button
-                  class="block w-full px-4 py-2 text-center text-sm bg-black text-white cursor-pointer hover:underline hover:underline-offset-4 hover:decoration-white"
+                  class="block overflow-visible w-52 z-50 mx-auto px-4 py-2 text-center text-sm bg-black text-white cursor-pointer hover:underline hover:underline-offset-4 hover:decoration-white"
                   role="menuitem"
-                  tabindex="-1"
                   onclick="location.href = '/katalog?category=<%= category._id %>'"
                 >
                   <%= category.name %>
@@ -178,12 +177,12 @@
       class="flex-grow w-full mt-[101.2px] sm:mt-[96px] mb-10 relative"
     >
       <div
-        class="content-wraper flex flex-col xl:flex-row container mx-auto py-8 xl:divide-solid xl:divide-x-2"
+        class="content-wraper flex flex-col xl:flex-row container mx-auto py-8 xl:divide-solid xl:divide-x-2 z-10"
       >
         <!-- Sorting and Filters Section -->
-        <div>
+        <div class="z-10">
           <div
-            class="filter-section grid-cols-2 gap-6 mb-8 xl:mb-0 md:grid-cols-3 xl:grid-cols-1 mx-4 xl:mx-0"
+            class="filter-section grid-cols-2 gap-6 mb-8 xl:mb-0 md:grid-cols-3 xl:grid-cols-1 mx-4 xl:mx-0 2xl:w-60"
           >
             <div class="grid grid-cols-subgrid col-span-2 sm:col-span-3">
               <h2 class="text-xl font-bold mb-4">Urutkan menurut:</h2>
@@ -238,7 +237,7 @@
         </div>
 
         <!-- Product Listing Section -->
-        <div class="katalog w-1/3 sm:w-screen ml-4 md:w-3/4 xl:pl-4">
+        <div class="katalog sm:w-screen ml-4 md:w-3/4 xl:pl-4">
           <h1 class="text-4xl font-bold mb-2">Katalog</h1>
           <hr class="line h-px w-full bg-black border-0 dark:bg-gray-700" />
           <div
